More fixes
- Change "Running tests" to "validating package"
- Upgarde system modal title change
- After upgrade modal not showing
- Fixes #4059, Edit bucket policy performance warning is shown in the
wrong context
- Fixes #4042,There is no indication for new alerts on the
notifications icon
- Fixes #4032, Upgrading system modal shows absolutely no progress and
the user might think the upgrade is stuck

--- a/frontend/src/app/components/main/commands-bar/commands-bar.less
+++ b/frontend/src/app/components/main/commands-bar/commands-bar.less
@@ -10,12 +10,13 @@ commands-bar {
 
     .alerts {
         position: relative;
+        overflow: visible;
 
-        &.counter::after {
+        &.counter::before {
             @size : 10px;
             content: attr(data-count);
             position: absolute;
-            top: -7px;
+            top: -5px;
             left: 0;
             display: block;
             min-width: @size;
@@ -26,6 +27,7 @@ commands-bar {
             border-radius: @size;
             color: @color8;
             text-align: center;
+            z-index: 1;
         }
     }
 }
